Fixed bug #25081 (odbc_fetch_array() may mangle numeric fields).